--- a/styles/style.css
+++ b/styles/style.css
@@ -6,6 +6,7 @@
 	--un-flag-bg: darkcyan;
 }
 div.container {
+	padding: 3px;
 	display: grid;
 	grid-template-columns: repeat(10, 50px);
 	grid-template-rows: repeat(10, 50px);
@@ -24,6 +25,7 @@ div.un-opened-block {
 }
 div.opened-block {
 	color: var(--fg);
+	background: rgb(30, 30, 30);
 }
 div.flaged-block {
 	background: var(--flag-bg);
@@ -57,6 +59,7 @@ div.container {
 	top: 50%;
 	left: 50%;
 	transform: translate(-50%,-50%);
+	aspect-ratio: 1/1;
 }
 
 div.game-info-div {
@@ -109,8 +112,9 @@ div.flags-count::before {
 }
 @media (max-width: 320px) {
 	div.container {
-		grid-template-columns: repeat(10, 20px);
-		grid-template-rows: repeat(10, 20px);
+		width: 95vw;
+		grid-template-columns: repeat(10, 1fr);
+		grid-template-rows: repeat(10, 1fr);
 		gap: 2px;
 	}
 	div.game-info-div {
